# neuromaster

./: Cargo.toml  README.md  flake.nix
assets/: scan.xml
src/: gui.rs  main.rs  simulation.rs
